SigmaCodebackup3rdSep/objects/AfterShip_Defaults__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store aftership API key, endpoint URL of all callouts</description>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Shipment__c</fullName>
        <label>Create Shipment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Get_Couriers__c</fullName>
        <label>Get Couriers</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <label>Tracking</label>
        <type>Url</type>
    </fields>
    <label>AfterShip defaults</label>
</CustomObject>